<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewGuiaUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="scrollViewGuiaUsuario"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:background="@drawable/questionback2">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GuiaUsuario">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView59"
            app:layout_constraintStart_toStartOf="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/textView59"
            tools:srcCompat="@drawable/gcobertura" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView57"
            app:layout_constraintStart_toStartOf="@+id/textView57"
            app:layout_constraintTop_toBottomOf="@+id/textView57"
            tools:srcCompat="@drawable/garmario" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario8"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView20"
            app:layout_constraintStart_toStartOf="@+id/imageView20"
            app:layout_constraintTop_toBottomOf="@+id/imageView20" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView58"
            app:layout_constraintStart_toStartOf="@+id/textView58"
            app:layout_constraintTop_toBottomOf="@+id/textView58"
            tools:srcCompat="@drawable/stats"/>

        <TextView
            android:id="@+id/textView59"
            android:layout_width="380dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario9"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView21"
            app:layout_constraintStart_toStartOf="@+id/imageView21"
            app:layout_constraintTop_toBottomOf="@+id/imageView21" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView55"
            app:layout_constraintStart_toStartOf="@+id/textView55"
            app:layout_constraintTop_toBottomOf="@+id/textView55"
            tools:srcCompat="@drawable/gperfil" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario7"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView19"
            app:layout_constraintStart_toStartOf="@+id/imageView19"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario6"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView18"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario4"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView16"
            app:layout_constraintStart_toStartOf="@+id/imageView16"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario3"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView15"
            app:layout_constraintStart_toStartOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/imageView15" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario5"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/GuiaUsuario2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textViewGuiaUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="5"
            android:text="Guia de usuario"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/GuiaUsuario1"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewGuiaUsuario"
            app:layout_constraintStart_toStartOf="@+id/textViewGuiaUsuario"
            app:layout_constraintTop_toBottomOf="@+id/textViewGuiaUsuario" />

        <Button
            android:id="@+id/buttonVolverMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:onClick="volverMainMenu"
            android:text="Volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView54"
            app:layout_constraintStart_toStartOf="@+id/textView54"
            app:layout_constraintTop_toBottomOf="@+id/textView54"
            tools:srcCompat="@drawable/gcatalogo" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView56"
            app:layout_constraintStart_toStartOf="@+id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/textView56"
            tools:srcCompat="@drawable/gretopregunta" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView51"
            app:layout_constraintStart_toStartOf="@+id/textView51"
            app:layout_constraintTop_toBottomOf="@+id/textView51"
            tools:srcCompat="@drawable/gretofrase" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView52"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView52"
            tools:srcCompat="@drawable/gretoahorcado" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView53"
            app:layout_constraintStart_toStartOf="@+id/textView53"
            app:layout_constraintTop_toBottomOf="@+id/textView53"
            tools:srcCompat="@drawable/gconfig" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
